# t_leadheat_template_searcher

./: README.md  pyproject.toml  run_app.py  test_request_script.py  tz_Python.docx
template_search_app/: main.py
template_search_app/api/: db_templates.json  endpoints.py  models.py
template_search_app/api/utils/: logic_db.py  logic_search.py  logic_validate.py
